--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </header>
     <div id="cover">
         <div class='container cover'>
-            <h1>GET A QUOTE</h1>
+            <h1>SVAKA MI CAST</h1>
             <form class="form-inline" action="" method="">
                <div class="input-group div-all">
                    <input type="number" class="age" placeholder="Age of travellers"/>
